# simple-config-sync

./: .gitignore  README.md  pyproject.toml
examples/link_config/: .gitignore  config-sync.toml
src/simple_config_sync/: __init__.py
src/simple_config_sync/core/: config.py  scripts.py  tui.py
src/simple_config_sync/core/assets/: tui.tcss
