[project]
name = "simple-config-sync"
version = "0.1.2"
description = "Used for synchronizing dotfiles across various Linux devices, capable of automatically creating links, automatically deleting links, and selectively synchronizing files."
authors = []
dependencies = [
    "textual>=0.52.1",
    "toml>=0.10.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
scstui = "simple_config_sync.core:run_tui"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.ruff.format]
quote-style = "single"

